--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <div id="wrap">
-    <!-- <header>
+    <header>
       <nav class="inner-wrap">
         <ul class="float-area">
           <li>
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-    </header> -->
+    </header>
 
     <h1>Home</h1>
     <div class="fullpage">
@@ -51,7 +51,30 @@
           </div>
       </div>
 
-      <div class="section" id="section1">01</div>
+      <div class="section" id="section1">
+        <section class="about-wrap inner-wrap">
+          <div class="title-box">
+            <strong>
+              <span>#퍼블리싱</span>
+              열심히 기본기를 다졌어요!
+            </strong>
+
+            <a href="javascript:void(0);" class="btn-resume">이력서(링크)</a>
+          </div>
+          <div class="contents-box">
+            <dl>
+              <dt>😼 Photoshop + Illustrator</dt>
+              <dd>사진 보정 및 로고, 배너, 아이콘 등을 제작 할 수 있습니다.</dd>
+              <dt>HTML + CSS</dt>
+              <dd>콘텐츠 내용에 알맞는 시멘틱 태그를 사용하여 코드를 작성합니다.</dd>
+              <dt>Photoshopt + Illustrator</dt>
+              <dd>사진 보정 및 로고, 배너, 아이콘 등을 제작 할 수 있습니다.</dd>
+              <dt>HTML + CSS</dt>
+              <dd>콘텐츠 내용에 알맞는 시멘틱 태그를 사용하여 코드를 작성합니다.</dd>                         
+            </dl>
+          </div>
+        </section>
+      </div>
       <div class="section" id="section2">
 
       </div>
@@ -63,9 +86,7 @@
 
 </body>
 <script type="text/javascript">
-  var myFullpage = new fullpage('.fullpage', {
-    sectionsColor: ['#f2f2f2', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff']
-  });
+  var myFullpage = new fullpage('.fullpage');
 </script>
 
 </html>
