포트폴리오 추가 작업

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/styles/common/common.css">
   <link rel="stylesheet" href="/styles/common/layout.css">
   <link rel="stylesheet" href="/styles/main.css">
-  <title>html-study/경기과학기술대</title>
+  <title>현정's PORTFOLIO</title>
 </head>
 
 <body>
@@ -56,33 +56,113 @@
         <section class="about-wrap inner-wrap">
           <div class="title-box">
             <strong>
-              <span>#퍼블리싱</span>
+              <span>#디자인 #퍼블리싱</span>
               열심히 기본기를 다졌어요!
             </strong>
 
-            <a href="javascript:void(0);" class="btn-resume">이력서(링크)</a>
+            <a href="javascript:void(0);" class="btn-resume btn-line">이력서 (링크)</a>
           </div>
           <div class="contents-box">
             <dl>
-              <dt>😼 Photoshop + Illustrator</dt>
+              <dt>Photoshop + Illustrator</dt>
               <dd>사진 보정 및 로고, 배너, 아이콘 등을 제작 할 수 있습니다.</dd>
               <dt>HTML + CSS</dt>
-              <dd>콘텐츠 내용에 알맞는 시멘틱 태그를 사용하여 코드를 작성합니다.</dd>
-              <dt>Photoshopt + Illustrator</dt>
-              <dd>사진 보정 및 로고, 배너, 아이콘 등을 제작 할 수 있습니다.</dd>
-              <dt>HTML + CSS</dt>
-              <dd>콘텐츠 내용에 알맞는 시멘틱 태그를 사용하여 코드를 작성합니다.</dd>                         
+              <dd>콘텐츠 내용에 알맞은 시맨틱 태그를 사용하여 코드를 작성합니다. <br>웹 표준 및 웹 접근성을 준수하여 반응형 레이아웃을 제작할 수 있습니다.</dd>
+              <dt>JavaScript + jQuery</dt>
+              <dd>자바스크립트 ES6문법을 이해하고 활용할 수 있습니다. <br>제이쿼리를 활용하여 다양한 애니메이션과 기능을 구현할 수 있습니다.</dd>
+              <dt>Co-work</dt>
+              <dd>원활한 협업을 위해 다양한 분야의 지식을 배우고 적용하며 공유합니다. <br>디자이너, 개발자와 가깝게 일하며, 함께 좋은 결과물을 만들고자 노력합니다.</dd>                         
             </dl>
           </div>
         </section>
       </div>
       <div class="section" id="section2">
-        portfoilo
+        <section class="portfoilo-wrap inner-wrap">
+          <div class="portfoilo-item">
+            <div class="txt-box">
+              <div class="tit-area">
+                <i class="num">01</i>
+                <strong class="tit">
+                  <span class="category">Responsive Website</span>
+                  대림대학교
+                </strong>
+              </div>
+
+              <dl>
+                <dt>Project</dt>
+                <dd>대림대학교 사이트 전체 리뉴얼</dd>
+                <dt>Skills</dt>
+                <dd>HTML5, CSS3, JQuery</dd>
+              </dl>
+  
+              <a href="javascript:void(0);" class="btn-process btn-line">작업 과정 보기</a>
+            </div>
+            <div class="img-box">
+              <div class="img"></div>
+            </div>
+          </div>
+
+          <div class="portfoilo-item">
+            <div class="img-box">
+              <div class="img"></div>
+            </div>
+            <div class="txt-box">
+              <div class="tit-area">
+                <i class="num">02</i>
+                <strong class="tit">
+                  <span class="category">Responsive Website</span>
+                  경기과학기술대학교
+                </strong>
+              </div>
+
+              <dl>
+                <dt>Project</dt>
+                <dd>경기과학기술대학교 사이트 전체 리뉴얼</dd>
+                <dt>Skills</dt>
+                <dd>HTML5, CSS3, JQuery</dd>
+              </dl>
+  
+              <a href="javascript:void(0);" class="btn-process btn-line">작업 과정 보기</a>
+            </div>
+          </div>
+
+          <div class="portfoilo-item">
+            <div class="txt-box">
+              <div class="tit-area">
+                <i class="num">03</i>
+                <strong class="tit">
+                  <span class="category">Responsive Website</span>
+                  고려사이버대학교
+                </strong>
+              </div>
+
+              <dl>
+                <dt>Project</dt>
+                <dd>고려사이버대학교 사이트 전체 리뉴얼</dd>
+                <dt>Skills</dt>
+                <dd>HTML5, CSS3, JQuery</dd>
+              </dl>
+  
+              <a href="javascript:void(0);" class="btn-process btn-line">작업 과정 보기</a>
+            </div>
+            <div class="img-box">
+              <div class="img"></div>
+            </div>
+          </div>
+        </section>
       </div>
       <div class="section" id="section3">
         contact me
       </div>
     </div>
+
+    <footer>
+      <div class="inner-wrap">
+        <p class="copyright">
+          © Copyright 2021
+        </p>
+      </div>
+    </footer>
   </div>
 
 </body>
