--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <link rel="stylesheet" href="/styles/common/reset.css">
   <link rel="stylesheet" href="/styles/lib/fullpage.css">
   <link rel="stylesheet" href="/styles/common/common.css">
-  <link rel="stylesheet" href="/styles/common/layout.css">
-  <link rel="stylesheet" href="/styles/main.css">
+  <!-- <link rel="stylesheet" href="/styles/common/layout.css">
+  <link rel="stylesheet" href="/styles/main.css"> -->
+  <link rel="stylesheet" href="/css/layout.css">
+  <link rel="stylesheet" href="/css/main.css">  
   <title>현정's PORTFOLIO</title>
 </head>
 
@@ -79,7 +81,7 @@
       <div class="section" id="section2">
         <section class="portfoilo-wrap inner-wrap">
           <div class="portfoilo-item">
-            <div class="txt-box">
+            <div class="txt-box left-box">
               <div class="tit-area">
                 <i class="num">01</i>
                 <strong class="tit">
@@ -97,16 +99,16 @@
   
               <a href="javascript:void(0);" class="btn-process btn-line">작업 과정 보기</a>
             </div>
-            <div class="img-box">
+            <div class="img-box right-box">
               <div class="img"></div>
             </div>
           </div>
 
           <div class="portfoilo-item">
-            <div class="img-box">
+            <div class="img-box left-box">
               <div class="img"></div>
             </div>
-            <div class="txt-box">
+            <div class="txt-box right-box">
               <div class="tit-area">
                 <i class="num">02</i>
                 <strong class="tit">
@@ -127,7 +129,7 @@
           </div>
 
           <div class="portfoilo-item">
-            <div class="txt-box">
+            <div class="txt-box left-box">
               <div class="tit-area">
                 <i class="num">03</i>
                 <strong class="tit">
@@ -145,25 +147,30 @@
   
               <a href="javascript:void(0);" class="btn-process btn-line">작업 과정 보기</a>
             </div>
-            <div class="img-box">
+            <div class="img-box right-box">
               <div class="img"></div>
             </div>
           </div>
         </section>
       </div>
+
       <div class="section" id="section3">
-        contact me
+        <div class="contact-wrap">
+          <span class="title">함께 나누고싶은 이야기가 있으시다면</span>
+          <strong class="mail">ooo@gmail.com</strong>
+          <span class="text">메일로 보내주세요!</span>
+        </div>
       </div>
     </div>
-
-    <footer>
-      <div class="inner-wrap">
-        <p class="copyright">
-          © Copyright 2021
-        </p>
-      </div>
-    </footer>
   </div>
+
+  <footer>
+    <div class="inner-wrap">
+      <p class="copyright">
+        &copy; Copyright 2021
+      </p>
+    </div>
+  </footer>  
 
 </body>
 <script type="text/javascript">
