layout scss 로 변경

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <!-- <link rel="stylesheet" href="/styles/common/layout.css">
   <link rel="stylesheet" href="/styles/main.css"> -->
   <link rel="stylesheet" href="/css/layout.css">
-  <link rel="stylesheet" href="/css/main.css">  
+  <!-- <link rel="stylesheet" href="/css/main.css">   -->
+  <link rel="stylesheet" href="/styles/main.css">
   <title>현정's PORTFOLIO</title>
 </head>
 
@@ -45,9 +46,9 @@
     <h1>Home</h1>
     <div class="fullpage">
       <div class="section box" id="section0">
-          <div class='wave -one'></div>
-          <div class='wave -two'></div>
-          <div class='wave -three'></div>
+          <div class='wave one'></div>
+          <div class='wave two'></div>
+          <div class='wave three'></div>
           <div class="title">
             <h2>PORTFOLIO</h2>
             <span>Web Publisher</span>
