--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <!-- <link rel="stylesheet" href="/styles/common/layout.css">
   <link rel="stylesheet" href="/styles/main.css"> -->
   <link rel="stylesheet" href="/css/layout.css">
-  <!-- <link rel="stylesheet" href="/css/main.css">   -->
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/css/main.css">  
   <title>현정's PORTFOLIO</title>
 </head>
 
@@ -163,15 +162,15 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <footer>
-    <div class="inner-wrap">
-      <p class="copyright">
-        &copy; Copyright 2021
-      </p>
-    </div>
-  </footer>  
+    <footer>
+      <div class="inner-wrap">
+        <p class="copyright">
+          &copy; Copyright 2021
+        </p>
+      </div>
+    </footer>  
+  </div>
 
 </body>
 <script type="text/javascript">
