211207-mobile 추가 수정

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://hjcode.dothome.co.kr/">
+  <meta property="og:title" content="김현정 | 포트폴리오">
+  <meta property="og:description" content="안녕하세요 웹퍼블리셔 김현정입니다">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="KimHyunJung">
+	<meta name="keywords" content="퍼블리셔,웹퍼블리셔,포트폴리오,이력서">
 
   <script src="/js/common/jquery-3.6.0.min.js"></script>
   <script src="/js/lib/scrolloverflow.min.js"></script>
@@ -16,7 +21,7 @@
 
   <link rel="stylesheet" href="/css/layout.css">
   <link rel="stylesheet" href="/css/main.css">
-  <title>현정's PORTFOLIO</title>
+  <title>김현정 | PORTFOLIO</title>
 </head>
 
 <body>
@@ -47,6 +52,7 @@
       <div class="btn-menu">
         <span></span>
       </div>
+
       <ul class="hide-menu">
         <li class="active">
           <a href="#Home">Home</a>
