--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
                 <strong>Skill & Tool</strong>
                 <p>
                   Photoshop, Illustrator, Xd 를 통한 디자인 작업이 가능하며, <br>
-                  원활한 협업에 필요한 GitHub, Zeplin, Figma 등을 사용할 수 있습니다.
+                  협업에 필요한 GitHub, Zeplin, Figma 등을 사용할 수 있습니다.
                 </p>
               </li>
               <li>
                 <strong>Co-work</strong>
                 <p>
-                  디자이너, 개발자와 가깝게 일하며, 항상 원활한 협업을 끌어내려고 노력합니다. <br>
+                  기획자, 디자이너, 개발자와 원활하게 소통하며 효과적인 협업을 이뤄내려고 노력합니다. <br>
                   의도를 이해하고 존중하며 '함께' 좋은 결과물을 만듭니다.
                 </p>
               </li>
@@ -133,10 +133,79 @@
       <div class="section" id="section2">
         <section class="portfoilo-wrap inner-wrap">
 
+          <!-- portfoilo 1 : SKT Direct Shop 유선 고도화 프로젝트 -->
           <div class="portfoilo-item float-area">
             <div class="txt-box left-box">
               <div class="tit-area">
                 <i class="num">01</i>
+                <strong class="tit">
+                  <span class="category">Adaptive Website</span>
+                  SKT Direct Shop 유선 고도화 프로젝트
+                </strong>
+              </div>
+
+              <dl>
+                <dt>Project</dt>
+                <dd>SKT Direct Shop 유선 페이지 신규 구축</dd>
+                <dt>Skill</dt>
+                <dd>HTML5, SCSS, jQuery</dd>
+                <dt>Detail</dt>
+                <dd>
+                  SKT Direct Shop에 새롭게 추가된 IPTV/인터넷 메뉴에 대한 <br>
+                  메인, 상품, 장바구니, 주문 프로세스 페이지들을 신규 구축하였습니다.
+              </dl>
+
+              <a href="https://www.notion.so/SKT-687ac6fe2bdf4260ba1e1e16e50fca69" target="_blank"
+                class="btn-process btn-line">작업 과정 보기</a>
+            </div>
+            <div class="img-box right-box">
+              <figure class="img wireline">
+                <figcaption class="skip">SKT Direct Shop 유선 고도화 페이지</figcaption>
+              </figure>
+            </div>
+          </div>
+          <!-- // portfoilo 1 : SKT Direct Shop 유선 고도화 프로젝트 -->
+
+          <!-- portfoilo 2 : SKT Direct Shop eSIM 고도화 프로젝트 -->
+          <div class="portfoilo-item float-area">
+            <div class="txt-box right-box">
+              <div class="tit-area">
+                <i class="num">02</i>
+                <strong class="tit">
+                  <span class="category">Adaptive Website</span>
+                  SKT Direct Shop eSIM 고도화 프로젝트
+                </strong>
+              </div>
+
+              <dl>
+                <dt>Project</dt>
+                <dd>SKT Direct Shop eSIM 페이지 신규 구축</dd>
+                <dt>Skill</dt>
+                <dd>HTML5, SCSS, jQuery</dd>
+                <dt>Detail</dt>
+                <dd>
+                  SKT Direct Shop의 eSIM Magnolia / eSIM 삼성 ODA <br>
+                  단말 개통 프로세스 페이지들을 신규 구축하였습니다.<br>
+                  더불어 eSIM 단말 개통 프로세스 페이지에 대한 유지 / 보수 작업도 함께 진행했습니다.
+                </dd>
+              </dl>
+
+              <a href="https://www.notion.so/SKT-eSIM-85eef98f047148bc96939b3d352d9e93" target="_blank"
+                class="btn-process btn-line">작업 과정 보기</a>
+            </div>
+            <div class="img-box left-box">
+              <figure class="img esim">
+                <figcaption class="skip">SKT Direct Shop eSIM 고도화 페이지</figcaption>
+              </figure>
+            </div>
+          </div>
+          <!-- // portfoilo 2 : SKT Direct Shop eSIM 고도화 프로젝트 -->
+
+          <!-- portfoilo 3 : 대림대학교 -->
+          <div class="portfoilo-item float-area">
+            <div class="txt-box left-box">
+              <div class="tit-area">
+                <i class="num">03</i>
                 <strong class="tit">
                   <span class="category">Responsive Website</span>
                   대림대학교
@@ -163,11 +232,13 @@
               </figure>
             </div>
           </div>
+          <!-- // portfoilo 3 : 대림대학교 -->
 
+          <!-- portfoilo 4 : 경기과학기술대학교 -->
           <div class="portfoilo-item float-area">
             <div class="txt-box right-box">
               <div class="tit-area">
-                <i class="num">02</i>
+                <i class="num">04</i>
                 <strong class="tit">
                   <span class="category">Responsive Website</span>
                   경기과학기술대학교
@@ -195,11 +266,13 @@
               </figure>
             </div>
           </div>
+          <!-- // portfoilo 4 : 경기과학기술대학교 -->
 
+          <!-- portfoilo 5 : 인하대학교 멀티미디어북 -->
           <div class="portfoilo-item float-area">
             <div class="txt-box left-box">
               <div class="tit-area">
-                <i class="num">03</i>
+                <i class="num">05</i>
                 <strong class="tit">
                   <span class="category">Responsive Website</span>
                   인하대학교 멀티미디어북
@@ -227,11 +300,13 @@
               </figure>
             </div>
           </div>
+          <!-- // portfoilo 5 : 인하대학교 멀티미디어북 -->
 
+          <!-- portfoilo 6 : 고려사이버대학교 -->
           <div class="portfoilo-item float-area">
             <div class="txt-box right-box">
               <div class="tit-area">
-                <i class="num">04</i>
+                <i class="num">06</i>
                 <strong class="tit">
                   <span class="category">Responsive Website</span>
                   고려사이버대학교
@@ -259,11 +334,17 @@
               </figure>
             </div>
           </div>
+          <!-- // portfoilo 6 : 고려사이버대학교 -->
 
-          <div class="portfoilo-item float-area">
+          <div class="veiw-more-area">
+            <a href="https://www.notion.so/11e0f45009ab4499a9ba60a33853ef2f?v=8b67e93ebec5497a9236e1dd0cda61e0" target="_blank" class="btn-veiw-more btn-line">더 보기</a>
+          </div>
+
+          <!-- portfoilo 7 : IKEA -->
+          <!-- <div class="portfoilo-item float-area">
             <div class="txt-box left-box">
               <div class="tit-area">
-                <i class="num">05</i>
+                <i class="num">07</i>
                 <strong class="tit">
                   <span class="category">Responsive Website</span>
                   IKEA
@@ -282,7 +363,6 @@
                 </dd>
               </dl>
 
-
               <a href="https://apricot-composer-e98.notion.site/IKEA-c4e3115b4d6a485b80527a8b8cf38eea" target="_blank"
                 class="btn-process btn-line">작업 과정 보기</a>
             </div>
@@ -291,12 +371,14 @@
                 <figcaption class="skip">이케아</figcaption>
               </figure>
             </div>
-          </div>
+          </div> -->
+          <!-- // portfoilo 7 : IKEA -->
 
-          <div class="portfoilo-item float-area">
+          <!-- portfoilo 8 : Zoo Coffee -->
+          <!-- <div class="portfoilo-item float-area">
             <div class="txt-box right-box">
               <div class="tit-area">
-                <i class="num">06</i>
+                <i class="num">08</i>
                 <strong class="tit">
                   <span class="category">Adaptive Website</span>
                   Zoo Coffee
@@ -323,7 +405,8 @@
                 <figcaption class="skip">주커피</figcaption>
               </figure>
             </div>
-          </div>
+          </div> -->
+          <!-- // portfoilo 8 : Zoo Coffee -->
         </section>
       </div>
 
@@ -348,6 +431,7 @@
 </body>
 <script type="text/javascript">
 
+  /* fullpage 세팅 */
   $('#fullpage').fullpage({
     anchors: ['Home', 'AboutMe', 'Portfoilo', 'Contact'],
     scrollOverflow: true,
@@ -359,6 +443,7 @@
       $('h1.anchor').text(anchorLink);
     },
   });
+  /* // fullpage 세팅 */
 
   /* 모바일 메뉴 */
   $(".btn-menu").click(function () {
@@ -371,15 +456,14 @@
     $(".btn-menu").removeClass("active");
     $(".mobile-gnb").removeClass("show");
     $(".mobile-gnb-dim").removeClass("active");
-  })
+  });
 
   $(".mobile-gnb>li").click(function () {
     $(".btn-menu").removeClass("active");
     $(".mobile-gnb").removeClass("show");
     $(".mobile-gnb-dim").removeClass("active");
-  })
-  /* //모바일 메뉴 */
-
+  });
+  /* // 모바일 메뉴 */
 
 </script>
 
