--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="http://hjcode.dothome.co.kr/">
+  <meta property="og:url" content="https://hjk810003.github.io/">
   <meta property="og:title" content="김현정 | 포트폴리오">
   <meta property="og:description" content="안녕하세요 웹퍼블리셔 김현정입니다">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="KimHyunJung">
 	<meta name="keywords" content="퍼블리셔,웹퍼블리셔,포트폴리오,이력서">
 
-  <script src="/js/common/jquery-3.6.0.min.js"></script>
-  <script src="/js/lib/scrolloverflow.js"></script>
-  <script src="/js/lib/jquery.fullpage.min.js"></script>
+  <script src="./js/common/jquery-3.6.0.min.js"></script>
+  <script src="./js/lib/scrolloverflow.js"></script>
+  <script src="./js/lib/jquery.fullpage.min.js"></script>
 
-  <link rel="stylesheet" href="/styles/common/reset.css">
-  <link rel="stylesheet" href="/styles/lib/jquery.fullpage.min.css">
-  <link rel="stylesheet" href="/styles/common/common.css">
+  <link rel="stylesheet" href="./styles/common/reset.css">
+  <link rel="stylesheet" href="./styles/lib/jquery.fullpage.min.css">
+  <link rel="stylesheet" href="./styles/common/common.css">
 
-  <link rel="stylesheet" href="/css/layout.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>김현정 | PORTFOLIO</title>
 </head>
 
