--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://hjk810003.github.io/">
+  <meta property="og:url" content="https://hjk810003.github.io/portfoilo/">
   <meta property="og:title" content="김현정 | 포트폴리오">
   <meta property="og:description" content="안녕하세요 웹퍼블리셔 김현정입니다">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
