--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1 class="anchor">Home</h1>
 
     <header>
-      <nav class="inner-wrap">
+      <nav class="inner">
         <ul class="gnb float-area">
           <li class="active">
             <a href="#Home">Home</a>
@@ -71,7 +71,8 @@
     </nav>
 
     <div id="fullpage">
-      <div class="section box" id="section0">
+      <!-- Home -->
+      <section class="section home" id="section0">
         <div class='wave one'></div>
         <div class='wave two'></div>
         <div class='wave three'></div>
@@ -81,10 +82,12 @@
             <span>KIM HYUN JUNG</span>
           </h2>
         </div>
-      </div>
+      </section>
+      <!-- // Home -->
 
-      <div class="section section-gray" id="section1">
-        <section class="about-wrap inner-wrap">
+      <!-- About me -->
+      <section class="section aboutme" id="section1">
+        <div class="inner">
           <div class="title-box">
             <strong>
               <span># Web Publisher</span>
@@ -127,11 +130,13 @@
               </li>
             </ul>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
+      <!-- // About me -->
 
-      <div class="section" id="section2">
-        <section class="portfoilo-wrap inner-wrap">
+      <!-- Portfolio -->
+      <section class="section portfoilo" id="section2">
+        <div class="inner">
 
           <!-- portfoilo 1 : SKT Direct Shop 유선 고도화 프로젝트 -->
           <div class="portfoilo-item float-area">
@@ -407,25 +412,30 @@
             </div>
           </div> -->
           <!-- // portfoilo 8 : Zoo Coffee -->
-        </section>
-      </div>
-
-      <div class="section" id="section3">
-        <div class="contact-wrap">
+        </div>
+      </section>
+      <!-- // Portfolio -->
+      
+      <!-- Contact -->
+      <section class="section contact" id="section3">
+        <div class="inner">
           <span class="tit">Contact to</span>
           <strong class="mail">hjk810003@gmail.com</strong>
           <span class="text">Thank you for watching :)</span>
         </div>
-      </div>
+      </section>
+      <!-- // Contact -->
     </div>
 
+    <!-- footer -->
     <footer>
-      <div class="inner-wrap">
+      <div class="inner">
         <p class="copyright">
-          &copy; Copyright HyunJung 2021
+          &copy; Copyright HyunJung 2023
         </p>
       </div>
     </footer>
+    <!-- // footer -->
   </div>
 
 </body>
